--- a/fundamentos.html
+++ b/fundamentos.html
@@ -5,12 +5,6 @@
 	<title>Mi primera pagina</title>
 </head>
 <body>
-<header>Aqui va la cabecera</header>
-<nav>Aqui va el menu de navegacion</nav>
-<section>Aqui va el articulo</section>
-<aside>aqui va la inforacion del autor</aside>
-<footer>Aqui va el pie de pagina</footer>
-
-
+<a href="index.html">Manual de HTML y CSS</a>. <a href="https://devcode.la/static/logo.png" download>Descargar logo</a>
 </body>
 </html>
