--- a/index.html
+++ b/index.html
@@ -10,25 +10,38 @@
 <section>
 	<h2>Manual de HTML y CSS</h2>
 	<article>
+		<h2 id="fundamentos"><a href="fundamentos.html">Fundamentos</a></h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, necessitatibus, odio cupiditate et pariatur consequatur a tempore itaque ullam soluta, reiciendis, <em>Este texto tiene enfasis</em> provident sequi. Nisi aperiam autem est, voluptate delectus nulla. <strong>este texto tiene un enfasis mayor</strong> </p>
 	</article>
 
-	<h2>HTML</h2>
+
 	<article>
+		<h2 id="html">HTML</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, necessitatibus, odio cupiditate et pariatur consequatur a tempore itaque ullam soluta, reiciendis, <em>Este texto tiene enfasis</em> provident sequi. Nisi aperiam autem est, voluptate delectus nulla. <strong>este texto tiene un enfasis mayor</strong> </p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt, alias similique, nostrum fugit porro corporis eos, illo, nihil amet molestiae sequi. Fugit sapiente repudiandae, officia ipsa accusamus ut. Veritatis.</p>
 	</article>
-	<h2>CSS</h2>
+
 	<article>
+		<h2>CSS</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, necessitatibus, odio cupiditate et pariatur consequatur a tempore itaque ullam soluta, reiciendis, <em>Este texto tiene enfasis</em> provident sequi. Nisi aperiam autem est, voluptate delectus nulla. <strong>este texto tiene un enfasis mayor</strong> </p>
 	</article>
 	<h2>JS</h2>
 	<article>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, necessitatibus, odio cupiditate et pariatur consequatur a tempore itaque ullam soluta, reiciendis, <em>Este texto tiene enfasis</em> provident sequi. Nisi aperiam autem est, voluptate delectus nulla. <strong>este texto tiene un enfasis mayor</strong> </p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, necessitatibus, odio cupiditate et pariatur consequatur a tempore itaque ullam soluta, reiciendis, <em>Este texto tiene enfasis</em> provident sequi. Nisi aperiam autem est, voluptate delectus nulla. <strong>este texto tiene un enfasis mayor</strong> <a href="#fundamentos">Ir a encabesado Fundamentos</a> <a href="#html"> Ir a encabesado html</a></p>
 	</article>
 </section>
 <aside>
 	<h1>Sobre el autor</h1>
-	<p>Este manual fue creado por Diego Frank</p>
+	<p>Este manual fue creado por <a href="https://www.facebook.com/profile.php?id=100008346840995" target="_blank">Diego Frank</a>puedes escribir un tgexto a <a href="mailto:diego.lipa@upeu.pe">diego.lipa@upeu.pe</a></p>
 </aside>
 <footer>Todo los derechos reservados - FOOTER</footer>
 </body>
