--- a/pagina_web/acerca.html
+++ b/pagina_web/acerca.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Diego Frank Lipa Choque | web</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/responseive.css">
 	<link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
 
 </head>
